[project]
name = "lunarlander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pygame>=2.6.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "ruff-lsp>=0.0.62",
]

[tool.ruff]
line-length = 80
